# ising_tm_py

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
