[package]
name = "ising-tm-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ising_tm_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
parallel-ising-tm = {git="https://github.com/vasilvas99/parallel-ising-tm"}
ndarray = "0.15.6"
numpy = "0.18.0"